<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#AC150A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/service_question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="@id/cost_of_service_textview"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service_textview" />

    <RadioGroup
        android:id="@+id/tip_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/twenty_percent_button"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question_textview">

        <RadioButton
            android:id="@+id/twenty_percent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_service"
            app:layout_constraintStart_toStartOf="@id/tip_options_button"
            app:layout_constraintTop_toBottomOf="@id/tip_options_button" />

        <RadioButton
            android:id="@+id/eighteen_percent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_service"
            app:layout_constraintStart_toStartOf="@id/tip_options_button"
            app:layout_constraintTop_toBottomOf="@id/twenty_percent_button" />

        <RadioButton
            android:id="@+id/fifteen_percent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_service"
            app:layout_constraintStart_toStartOf="@id/tip_options_button"
            app:layout_constraintTop_toBottomOf="@id/eighteen_percent_button" />
    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_options_button"
        app:layout_constraintTop_toBottomOf="@id/tip_options_button"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tip_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tip Amount: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />


</androidx.constraintlayout.widget.ConstraintLayout>